Add all new source files missing from initial push