@@ -12,91 +12,21 @@ public final class CardCodeParser {
      * Returns {@code null} if the input cannot be parsed.
      */
     public static ParsedCode parse(String input) {
-        if (input == null || input.trim().isEmpty()) {
-            return null;
+        if (input==null || input.isBlank()) return null;
+        String text=input.trim().replaceAll("\\s+", " ");
+        if (text.matches("(?i)^[a-z]{3}\\d.*")) text=text.substring(0,3)+" "+text.substring(3);
+        var match=java.util.regex.Pattern.compile("(?i)^([a-z0-9]{2,8}) (?:([a-z0-9]{2,8})[ -])?(\\d+[a-z0-9★†.*-]*)(?: ([fes]))?$").matcher(text);
+        if (!match.matches()) return null;
+        String set=match.group(1), prefix=match.group(2), number=match.group(3), finish=match.group(4);
+        if (prefix!=null && !"plst".equalsIgnoreCase(set)) return null;
+        if (finish==null) {
+            finish="";
+            if (number.matches("(?i).*\\d[fes]$")) { finish=number.substring(number.length()-1); number=number.substring(0,number.length()-1); }
         }
-
-        input = input.trim().toUpperCase().replaceAll("\\s+", " ");
-
-        // Check for finish indicators - handle both "1f" and "1 f" formats
-        String finish = "";
-
-        // Check if ends with 'F', 'E', or 'S' (already uppercased)
-        boolean isSurge = false;
-        if (input.endsWith("F")) {
-            finish = "F";
-            input = input.substring(0, input.length() - 1).trim();
-        } else if (input.endsWith("E")) {
-            finish = "E";
-            input = input.substring(0, input.length() - 1).trim();
-        } else if (input.endsWith("S")) {
-            finish = "S";
-            isSurge = true;
-            input = input.substring(0, input.length() - 1).trim();
-        }
-
-        String[] parts = input.split(" ");
-        if (parts.length < 2) {
-            return null;
-        }
-
-        // PLST (The List) detection
-        // Accepted formats:
-        //   "PLST ARB 1"   → 3 tokens (set + number space-separated)
-        //   "PLST PLS11"   → 2 tokens, second is letters+digits concatenated
-        //   "PLST arb-1"   → 2 tokens, re-entry of a previously formatted code
-        if ("PLST".equals(parts[0])) {
-            // Input is already uppercased by this point; preserve case so the
-            // Scryfall URL matches exactly: /cards/plst/PLS-11
-            if (parts.length >= 3) {
-                // "PLST PLS 11" or "PLST ARB 1"
-                StringBuilder collNum = new StringBuilder();
-                for (int i = 2; i < parts.length; i++) {
-                    collNum.append(parts[i]);
-                }
-                return new ParsedCode("plst", parts[1] + "-" + collNum, finish);
-            } else if (parts.length == 2) {
-                String combined = parts[1];
-                if (combined.contains("-")) {
-                    // Already in canonical form: "PLST PLS-11"
-                    return new ParsedCode("plst", combined, finish);
-                }
-                // Try to split concatenated "PLS11" → "PLS-11"
-                java.util.regex.Matcher m = java.util.regex.Pattern
-                        .compile("^([A-Za-z]+)(\\d+[A-Za-z]*)$").matcher(combined);
-                if (m.matches()) {
-                    return new ParsedCode("plst", m.group(1) + "-" + m.group(2), finish);
-                }
-            }
-        }
-
-        String setCode = parts[0].toUpperCase();
-
-        // Collector number may have letter suffixes (e.g., "143b", "5a")
-        StringBuilder collectorNumber = new StringBuilder();
-        for (int i = 1; i < parts.length; i++) {
-            collectorNumber.append(parts[i]);
-        }
-
-        // Handle case where user types without space (e.g., "CHR143B")
-        if (parts.length == 1 && parts[0].length() > 3) {
-            String combined = parts[0];
-            if (combined.length() >= 4) {
-                setCode = combined.substring(0, 3);
-                collectorNumber = new StringBuilder(combined.substring(3));
-            }
-        }
-
-        // Apply set conversion mapping (e.g., CHK -> chk for Scryfall API)
-        String apiSetCode = SetList.toScryfallCode(setCode);
-
-        // Scryfall expects lowercase collector numbers with letter suffixes
-        String apiCollectorNumber = collectorNumber.toString().toLowerCase();
-
-        // Surge foil: Scryfall uses ★ (U+2605) appended to the collector number (e.g. "73★")
-        if (isSurge) apiCollectorNumber = apiCollectorNumber + "★";
-
-        return new ParsedCode(apiSetCode, apiCollectorNumber, finish);
+        if (prefix!=null) number=prefix.toUpperCase(java.util.Locale.ROOT)+"-"+number;
+        else number=number.toLowerCase(java.util.Locale.ROOT);
+        if ("s".equalsIgnoreCase(finish) && !number.endsWith("★")) number+="★";
+        return new ParsedCode(SetList.toScryfallCode(set),number,finish.toUpperCase(java.util.Locale.ROOT));
     }
 
     /** Formats a ParsedCode back into a canonical display string. */
@@ -105,11 +35,11 @@ public final class CardCodeParser {
 
         if (code.setCode.equalsIgnoreCase("plst")) {
             // PLST: "PLST arb-1" — hyphen preserved; strip any Scryfall API markers (★)
-            String collNum = code.collectorNumber.replace("★", "");
+            String collNum = code.collectorNumber;
             formatted.append("PLST ").append(collNum);
         } else {
             // Strip Scryfall API markers (★ for surge foil) from the display number
-            String displayNum = code.collectorNumber.replace("★", "");
+            String displayNum = code.collectorNumber;
             formatted.append(code.setCode.toUpperCase())
                     .append(" ")
                     .append(displayNum);
